--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ body {
 }
 
 .output .current-operand {
-  color: rgb(239, 215, 215);
-  font-size: 1.5rem;
+  color: white;
+  font-size: 2.5rem;
+  font: inherit;
 }
